--- a/Entregable5/homeStyles.css
+++ b/Entregable5/homeStyles.css
@@ -116,11 +116,10 @@ header{
     margin-bottom: 44px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
-.post2{
-    margin-top: 70px;
+
+.second{
+   top: 147px;
 }
-
-
 .post-header{
     display: flex;
     flex-direction: row;
@@ -263,7 +262,7 @@ header{
 
     position: static;
     width: auto;
-    height: 327px;
+    height: auto;
     left: 0px;
     top: 1px;
 
@@ -277,6 +276,9 @@ header{
     margin: 0px;
 }
 
+.body2{
+    height: 350px;
+}
 .post-text{
     position: static;
     width: 319px;
@@ -310,7 +312,7 @@ header{
 
 .post-link{
     position: static;
-    width: 151px;
+    width: 100%;
     height: 16px;
     left: 0px;
     top: 0px;
@@ -335,21 +337,55 @@ header{
 .main-content{
     position: static;
     width: 326px;
-    height: 189px;
+    height: 169px;
     left: 8.5px;
-    top: 98px;
+
+    /* Inside Auto Layout */
+    flex: none;
+    order: 3;
+    flex-grow: 0;
+
+}
+
+.content2{
+    height: auto;
+}
+.image-post{
+    width: 326px;
+    height: 169px;
+}
+.image-post-multiple{
+    width: 326px;
+    height: 149px;
+}
+
+.image-right{
+    position: static;
+    width: 160px;
+    height: 90px;
+    left: 0px;
+    top: 0px;
+
 
     /* Inside Auto Layout */
 
     flex: none;
-    order: 3;
+    order: 0;
     flex-grow: 0;
-    margin: 12px 0px;
 }
-.image-post{
-    width: 326px;
-    height: 189px;
+
+.image-left{
+    position: absolute;
+    width: 165px;
+    height: 90px;
+    position: absolute;
+
+    /* Light / neutral.overlayDarken */
+    filter: brightness(50%);
+    background: rgba(43, 43, 51, 0.6);
+
 }
+
 
 .play{
     position: relative;
@@ -361,10 +397,15 @@ header{
 
 }
 
+.play:hover{
+    opacity: 100%;
+}
+
 .container-content{
     display: flex;
     flex-direction: column-reverse;
 }
+.content3{}
 
 .like{
     position: static;
@@ -612,4 +653,26 @@ section.body-container{
 
 #last {
     margin-bottom: 260px;
+}
+
+.image-text{
+    
+    position: absolute;
+    width: 38px;
+    height: 32px;
+
+    /* title24 */
+
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+    /* identical to box height, or 133% */
+
+    top: 335px;
+    left: 225px;
+    /* Light / neutral.containerBackground */
+
+    color: #FFFFFF;
 }
