--- a/Entregable5/homeStyles.css
+++ b/Entregable5/homeStyles.css
@@ -117,6 +117,9 @@ header{
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+.post3{
+    top: 124px;
+}
 .second{
    top: 157px;
 }
