--- a/Entregable5/searchEmptyStyles.css
+++ b/Entregable5/searchEmptyStyles.css
@@ -6,6 +6,10 @@ a{
     text-decoration: none;
 }
 
+a :visited {
+    text-decoration:none;
+    color: black;
+}
 
 #back-image {
     width: 12px;
