--- a/Entregable5/notificationStyles.css
+++ b/Entregable5/notificationStyles.css
@@ -49,7 +49,7 @@
     width: 227px;
     height: 58px;
     top: 2px;
-    
+    left: 130px;
     font-family: Mulish;
     font-style: normal;
     font-weight: 800;
